--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -2,9 +2,13 @@ html, body {
   width: 100vw;
   height: 100vh;
   margin: 0 auto !important;
+
+  display: flex;
+  flex-direction: column;
 }
 
-.app {
+#root {
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
